--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ website:
         href: https://linkedin.com/in/katherine-amelia-higgs
       - icon: github
         href: https://github.com/katherinehiggs
-      - text: '![](subject.png){height=1em}'
+      - text: "{{< fa brands bluesky >}}"
         href: https://bsky.app/profile/katherinehiggs.com
       
 format:
